src/tess/tl/test/fail/test_fail_reserved_type_fun.tl
#module main

any () { 0 }
main() { 0 }
